# algcalc2

./: .gitignore  notes.md
emu/: Cargo.toml
emu/src/: main.rs
firmware/: Cargo.toml
firmware/.cargo/: config.toml
firmware/src/: config.rs  hardware.rs  input_thread.rs  main.rs
os/: Cargo.toml
os/src/: hardware.rs  lib.rs  log.rs
